# Mini-IDA-Binary-Explorer

./: .gitattributes  README.md  metadata.json
.github/workflows/: android.yml  build.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/: signatures.json
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/: Adapters.kt  AnnotationEntry.kt  AnnotationRepository.kt  ApkInspector.kt  ApkLibraryPicker.kt  BinaryParsingService.kt  BookmarkEntry.kt  BookmarkRepository.kt  DecompilerService.kt  ElfParser.kt  ExportManager.kt  JumpTableAnalyzer.kt  JumpTableInfo.kt  LoadProgress.kt  LoadingProgressDialogs.kt  MainActivity.kt  NavigationController.kt  NavigationMinimap.kt  OffsetsDatabaseHelper.kt  SearchEngine.kt  SignatureMatcher.kt  XrefAnalyzer.kt  XrefEntry.kt
app/src/main/java/com/example/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/drawable/: scrollbar_thumb_neon.xml
app/src/main/res/layout/: activity_main.xml  dialog_annotation.xml  dialog_bookmarks.xml  dialog_xref_details.xml  item_bookmark_row.xml  item_function.xml  item_function_offset.xml  item_hex.xml  item_hex_disassembly_line.xml  item_recent_file.xml  item_section_row.xml  item_string.xml  item_xref_list.xml  tab_disassembly.xml  tab_overview.xml  tab_recycler.xml
app/src/main/res/layout-land/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/test/java/com/example/: ExampleRobolectricTest.kt  GreetingScreenshotTest.kt
gradle/: libs.versions.toml
